# Detecting_Pulsars

./: .gitignore  CMakeLists.txt  README.md
include/: denoising.h  fft.h  utils.h  wavelet.h
src/: denoising.cpp  fft.cpp  main.cpp  utils.cpp  wavelet.cpp
